--- a/main.html
+++ b/main.html
@@ -7,6 +7,28 @@
 </head>
 
 <body>
+	<form action="" method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="Name">
+		<br>
+		<label for="phone">Phone Number</label>
+		<input type="text" id="phone" placeholder="Phone Nubmer">
+		<br>
+		<label for="address">Address</label>
+		<input type="text" id="address" placeholder="Address">
+		<br>
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+		<br>
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select name="" id="multiSelect">
+			<option>German Sheferd</option>
+			<option>Beagle</option>
+			<option>Pomarian</option>
+		</select>
+		<br>
+		<input type="submit" value="Sbumit">
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
