--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<input type="text" id="name" placeholder="Name">
 		<br>
 		<label for="phone">Phone Number</label>
-		<input type="text" id="phone" placeholder="Phone Nubmer">
+		<input type="text" id="phone" placeholder="Phone Number">
 		<br>
 		<label for="address">Address</label>
 		<input type="text" id="address" placeholder="Address">
@@ -27,7 +27,7 @@
 			<option>Pomarian</option>
 		</select>
 		<br>
-		<input type="submit" value="Sbumit">
+		<input type="submit" value="Submit">
 	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
