--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 			<option>Pomarian</option>
 		</select>
 		<br>
-		<input type="submit" value="Submit">
+		<input type="submit" value="Submit" id="submit">
 	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
